--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 dist*
-static/tmp/
-config/client_session_key.aes
 *.hi
 *.o
 *.sqlite3
 .hsenv*
+static/tmp/
+config/client_session_key.aes
 cabal-dev/
 yesod-devel/
+src/Main
