--- a/klas.cabal
+++ b/klas.cabal
@@ -42,7 +42,7 @@ library
                 DeriveDataTypeable
 
     build-depends: base                          >= 4          && < 5
-                 -- , yesod-platform                >= 1.1        && < 1.2
+                 , yesod-platform                >= 1.1        && < 1.3
                  , yesod                         >= 1.2        && < 1.3
                  , yesod-core                    >= 1.2        && < 1.3
                  , yesod-auth                    >= 1.2        && < 1.3
@@ -56,7 +56,7 @@ library
                  , template-haskell
                  , hamlet                        >= 1.1        && < 1.2
                  , shakespeare-css               >= 1.0        && < 1.1
-                 , shakespeare-js                >= 1.0.2      && < 1.2
+                 , shakespeare-js                >= 1.0.2      && < 1.3
                  , shakespeare-text              >= 1.0        && < 1.1
                  , hjsmin                        >= 0.1        && < 0.2
                  , monad-control                 >= 0.3        && < 0.4
